# RocketFlightSim

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.md
examples/: README.md  example_configurations.py  first_rocket.ipynb  test_configs.py
flight-simulator/: Prometheus_RocketPy_sim.ipynb  README.md  RocketPy_sim.ipynb  burnout_states.csv  configs.py  constants.py  controller_flight_simulator.py  flight_simulation.py  generate_tables.py  helper_functions.py  rocket_classes.py  test_configs.py  visualizations_cleaned.ipynb
rocketflightsim/: README.md  __init__.py  airbrakes_to_apogee.py  burnout_to_apogee.py  constants.py  flight_sim_airbrakes.py  flight_sim_coast.py  flight_sim_guided.py  flight_sim_ignition_to_liftoff.py  flight_sim_parachute.py  flight_sim_unguided_boost.py  flight_simulation.py  flight_stages_combined.py  helper_functions.py  ignition_to_liftoff.py  liftoff_to_rail_clearance.py  plotting_functions.py  rail_clearance_to_burnout.py  rocket_classes.py  test_configs.py
rocketflightsim/classes/: airbrakes.py  motor.py  (+4 more)
scripts/: README.md  fin_flutter.py  max_theoretical_g_q.py  max_theoretical_g_v.py
tests/: README.md  test_configs.py  test_default_timestep.py  test_flight_sim_airbrakes.py  test_flight_sim_coast.py  test_flight_sim_guided.py  test_flight_sim_ignition_to_liftoff.py  test_flight_sim_parachute.py  test_flight_sim_unguided_boost.py  test_flight_simulation.py  test_flight_simulation_empirical.py  test_flight_simulation_timestep.py  test_new_simulation.py  test_rfs_accuracy.py  test_simulation_theoretical.py
(+6 files in other folders)
