[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketflightsim"
version = "0.2.0"
description = "A lightweight rocket flight simulator."
readme = "README.md"
authors = [
    {name = "Giorgio Chassikos, Western Engineering Rocketry Team", email = "werocketry@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/werocketry/RocketFlightSim"

[tool.setuptools.packages.find]
include = ["rocketflightsim", "rocketflightsim.*"]
